@@ -1,5 +1,11 @@
 2005-05-12  Boekemeier  <jostb@intern>
 
+	* server/php/java/bridge/JavaBridge.java (next): prevent loop;
+	object.getClass() returns the same object if object is
+	java.lang.Class.
+
+	* tests.php4/testClass.php: new Test for above fix.
+	
 	* server/php/java/bridge/TCPServerSocket.java (create):
 	moved error handling to Listener.java
 	
